Fix links to newly created pages. Chane nav-link...
class to nav-link-main to avoid affecting other nav-links.

--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -7,7 +7,7 @@
     <ul class="navbar-nav mx-auto">
       <!--  Sports  -->
       <li class="nav-item dropdown active-nav">
-        <a class="nav-link dropdown-toggle" href="{{site.baseurl}}/sports" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">Sports</a>
+        <a class="nav-link nav-link-main dropdown-toggle" href="{{site.baseurl}}/sports" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">Sports</a>
         <!--  Sports dropdown menu  -->
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <div class="container drop-pad">
@@ -18,48 +18,48 @@
                   <li class="nav-list">
                     <div class="row nav-row">
                       <div class="col-md-4">
-                        <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/baseball"><strong>Baseball</strong></a>
+                        <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/baseball"><strong>Baseball</strong></a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link no-pad dark-text schedule-link" href="{{site.baseurl}}/baseball#schedule">Schedule</a>
+                        <a class="nav-link nav-link-main no-pad dark-text schedule-link" href="{{site.baseurl}}/baseball#schedule">Schedule</a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/baseball#roster">Roster</a>
+                        <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/baseball/roster">Roster</a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/baseball#news">News</a>
+                        <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/baseball#news">News</a>
                       </div>
                     </div>
                   </li>
                   <li class="nav-list">
                     <div class="row nav-row">
                       <div class="col-md-4">
-                        <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/mens-basketball"><strong>Basketball</strong></a>
+                        <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/mens-basketball"><strong>Basketball</strong></a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link no-pad dark-text schedule-link" href="{{site.baseurl}}/mens-basketball#schedule">Schedule</a>
+                        <a class="nav-link nav-link-main no-pad dark-text schedule-link" href="{{site.baseurl}}/mens-basketball#schedule">Schedule</a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/mens-basketball#roster">Roster</a>
+                        <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/mens-basketball#roster">Roster</a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/mens-basketball#news">News</a>
+                        <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/mens-basketball#news">News</a>
                       </div>
                     </div>
                   </li>
                   <li class="nav-list">
                     <div class="row nav-row">
                       <div class="col-md-4">
-                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer"><strong>Soccer</strong></a>
+                        <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/soccer"><strong>Soccer</strong></a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link no-pad dark-text schedule-link" href="http://athletics.kcc.edu/soccer#schedule">Schedule</a>
+                        <a class="nav-link nav-link-main no-pad dark-text schedule-link" href="{{site.baseurl}}/soccer/schedule">Schedule</a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer#roster">Roster</a>
+                        <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/soccer/roster">Roster</a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer#news">News</a>
+                        <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/soccer/news">News</a>
                       </div>
                     </div>
                   </li>
@@ -71,48 +71,48 @@
                   <li class="nav-list">
                     <div class="row nav-row">
                       <div class="col-md-4">
-                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/wbasketball"><strong>Basketball</strong></a>
+                        <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/womens-basketball"><strong>Basketball</strong></a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link no-pad dark-text schedule-link" href="http://athletics.kcc.edu/wbasketball#schedule">Schedule</a>
+                        <a class="nav-link nav-link-main no-pad dark-text schedule-link" href="http://athletics.kcc.edu/wbasketball#schedule">Schedule</a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/wbasketball#roster">Roster</a>
+                        <a class="nav-link nav-link-main no-pad dark-text" href="http://athletics.kcc.edu/wbasketball#roster">Roster</a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/wbasketball#news">News</a>
+                        <a class="nav-link nav-link-main no-pad dark-text" href="http://athletics.kcc.edu/wbasketball#news">News</a>
                       </div>
                     </div>
                   </li>
                   <li class="nav-list">
                     <div class="row nav-row">
                       <div class="col-md-4">
-                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/softball"><strong>Softball</strong></a>
+                        <a class="nav-link nav-link-main no-pad dark-text" href="http://athletics.kcc.edu/softball"><strong>Softball</strong></a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link no-pad dark-text schedule-link" href="http://athletics.kcc.edu/softball#schedule">Schedule</a>
+                        <a class="nav-link nav-link-main no-pad dark-text schedule-link" href="http://athletics.kcc.edu/softball#schedule">Schedule</a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/softball#roster">Roster</a>
+                        <a class="nav-link nav-link-main no-pad dark-text" href="http://athletics.kcc.edu/softball#roster">Roster</a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/softball#news">News</a>
+                        <a class="nav-link nav-link-main no-pad dark-text" href="http://athletics.kcc.edu/softball#news">News</a>
                       </div>
                     </div>
                   </li>
                   <li class="nav-list">
                     <div class="row nav-row">
                       <div class="col-md-4">
-                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/volleyball"><strong>Volleyball</strong></a>
+                        <a class="nav-link nav-link-main no-pad dark-text" href="http://athletics.kcc.edu/volleyball"><strong>Volleyball</strong></a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link no-pad dark-text schedule-link" href="http://athletics.kcc.edu/volleyball#schedule">Schedule</a>
+                        <a class="nav-link nav-link-main no-pad dark-text schedule-link" href="http://athletics.kcc.edu/volleyball#schedule">Schedule</a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/volleyball#roster">Roster</a>
+                        <a class="nav-link nav-link-main no-pad dark-text" href="http://athletics.kcc.edu/volleyball#roster">Roster</a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/volleyball#news">News</a>
+                        <a class="nav-link nav-link-main no-pad dark-text" href="http://athletics.kcc.edu/volleyball#news">News</a>
                       </div>
                     </div>
                   </li>
@@ -126,7 +126,7 @@
       </li>
       <!--  Facilities  -->
       <li class="nav-item dropdown active-nav">
-        <a class="nav-link dropdown-toggle" href="{{site.baseurl}}/facilities" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">Facilities</a>
+        <a class="nav-link nav-link-main dropdown-toggle" href="{{site.baseurl}}/facilities" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">Facilities</a>
       <!--  Facilities dropdown menu  -->
       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
         <div class="container">
@@ -142,16 +142,16 @@
               <li class="nav-list">
                 <div class="row nav-row facilities-drop-pad">
                   <div class="col-md-3">
-                    <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/fitness-center"><strong>Fitness Center</strong></a>
+                    <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/fitness-center"><strong>Fitness Center</strong></a>
                   </div>
                   <div class="col-md-2 d-none d-md-block">
-                    <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/fitness-center#membership">Membership</a>
+                    <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/fitness-center#membership">Membership</a>
                   </div>
                   <div class="col-md-3 d-none d-md-block">
-                    <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/fitness-center#trainers">Personal Trainers</a>
+                    <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/fitness-center#trainers">Personal Trainers</a>
                   </div>
                   <div class="col-md-2 d-none d-md-block">
-                    <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/fitness-center#testimonials">Testimonials</a>
+                    <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/fitness-center#testimonials">Testimonials</a>
                   </div>
                   <div class="col-md-1 d-none d-md-block">
                   </div>
@@ -160,19 +160,19 @@
               <li class="nav-list">
                 <div class="row nav-row">
                   <div class="col-md-3">
-                    <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/sports-facilities"><strong>Sports Facilities</strong></a>
+                    <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/sports-facilities"><strong>Sports Facilities</strong></a>
                   </div>
                   <div class="col-md-2 d-none d-md-block">
-                    <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/sports-facilities#gym">Ryan&#160;Activities Center</a>
+                    <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/sports-facilities#gym">Ryan&#160;Activities Center</a>
                   </div>
                   <div class="col-md-2 d-none d-md-block">
-                    <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/sports-facilities#baseball-field">Baseball&#160;Field</a>
+                    <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/sports-facilities#baseball-field">Baseball&#160;Field</a>
                   </div>
                   <div class="col-md-2 d-none d-md-block">
-                    <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/sports-facilities#soccer-field">Soccer&#160;Field</a>
+                    <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/sports-facilities#soccer-field">Soccer&#160;Field</a>
                   </div>
                   <div class="col-md-2 d-none d-md-block">
-                    <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/sports-facilities#softball-field">Softball&#160;Field</a>
+                    <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/sports-facilities#softball-field">Softball&#160;Field</a>
                   </div>
                 </div>
               </li>
@@ -186,12 +186,12 @@
     </li>
     <!--  Recruitment  -->
     <li class="nav-item nav-split">
-      <a class="nav-link" href="http://athletics.kcc.edu/recruit">Recruitment</a>
+      <a class="nav-link nav-link-main" href="{{site.baseurl}}/recruitment">Recruitment</a>
     </li>
 
     <!--  Support Athletics  -->
     <li class="nav-item dropdown active-nav">
-      <a class="nav-link dropdown-toggle" href="http://athletics.kcc.edu/support" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Support&#160;Athletics</a>
+      <a class="nav-link nav-link-main dropdown-toggle" href="http://athletics.kcc.edu/support" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Support&#160;Athletics</a>
     <!--  Support Athletics dropdown menu  -->
     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
       <div class="container">
@@ -207,14 +207,14 @@
             <li class="nav-list">
               <div class="row nav-row support-drop-pad">
                 <div class="col-md-12">
-                  <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/cash-bash"><strong>Cash Bash</strong></a>
+                  <a class="nav-link nav-link-main no-pad dark-text" href="http://athletics.kcc.edu/cash-bash"><strong>Cash Bash</strong></a>
                 </div>
               </div>
             </li>
             <li class="nav-list">
               <div class="row nav-row">
                 <div class="col-md-12">
-                  <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/cavalier-classic"><strong>Cavalier Classic Golf Outing</strong></a>
+                  <a class="nav-link nav-link-main no-pad dark-text" href="http://athletics.kcc.edu/cavalier-classic"><strong>Cavalier Classic Golf Outing</strong></a>
                 </div>
               </div>
             </li>
@@ -229,7 +229,7 @@
 
     <!--  About  -->
     <li class="nav-item dropdown active-nav">
-      <a class="nav-link dropdown-toggle" href="http://athletics.kcc.edu/about" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About</a>
+      <a class="nav-link nav-link-main dropdown-toggle" href="http://athletics.kcc.edu/about" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About</a>
     <!--  About dropdown menu  -->
     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
       <div class="container">
@@ -245,28 +245,28 @@
             <li class="nav-list">
               <div class="row nav-row about-drop-pad">
                 <div class="col-md-12">
-                  <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/student-athletes"><strong>Student-Athlete Experience</strong></a>
+                  <a class="nav-link nav-link-main no-pad dark-text" href="http://athletics.kcc.edu/student-athletes"><strong>Student-Athlete Experience</strong></a>
                 </div>
               </div>
             </li>
             <li class="nav-list">
               <div class="row nav-row">
                 <div class="col-md-12">
-                  <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/equity"><strong>Equity in Athletics</strong></a>
+                  <a class="nav-link nav-link-main no-pad dark-text" href="http://athletics.kcc.edu/equity"><strong>Equity in Athletics</strong></a>
                 </div>
               </div>
             </li>
             <li class="nav-list">
               <div class="row nav-row">
                 <div class="col-md-12">
-                  <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/staff"><strong>Staff Directory</strong></a>
+                  <a class="nav-link nav-link-main no-pad dark-text" href="http://athletics.kcc.edu/staff"><strong>Staff Directory</strong></a>
                 </div>
               </div>
             </li>
             <li class="nav-list">
               <div class="row nav-row">
                 <div class="col-md-12">
-                  <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/staff"><strong>Alumni Survey</strong></a>
+                  <a class="nav-link nav-link-main no-pad dark-text" href="http://athletics.kcc.edu/staff"><strong>Alumni Survey</strong></a>
                 </div>
               </div>
             </li>
