--- a/assets/scss/1-base/_typography.scss
+++ b/assets/scss/1-base/_typography.scss
@@ -9,6 +9,16 @@
     Bold =      font-weight: 700
     Black =     font-weight: 900
 ============================================== */
+
+.page-heading {
+  color: $sub-nav-heading;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.8em;
+  font-weight: 700;
+  letter-spacing: .06em;
+  text-transform: uppercase;
+}
+
 h3 {
   font-size: 1.6em;
 }
@@ -21,7 +31,8 @@ h3 {
   text-transform: uppercase;
 }
 
-.nav-link {
+.nav-link-main {
+  color: $nav-link !important;
   font-family: 'Roboto', sans-serif;
   font-size: 1em;
   font-weight: 400;
@@ -30,7 +41,7 @@ h3 {
 }
 
 @media screen and (max-width: 1080px) {
-  .nav-link {
+  .nav-link-main {
     font-size: .9em;
     }
 }
