--- a/_includes/roster-table.html
+++ b/_includes/roster-table.html
@@ -1,22 +1,28 @@
-<section id="table-area">
-  {% assign mydata=site.data.baseball-roster %}
-  <div class="table-responsive">
-    <table class="table table-striped table-hover">
-        <caption>Table caption</caption>
-        <thead>
-        {% for column in mydata[0] %}
-            <th>{{ column[0] }}</th>
-        {% endfor %}
-        </thead>
-        <tbody>
-        {% for row in mydata %}
-            <tr>
-            {% for cell in row %}
-                <td>{{ cell[1] }}</td>
-            {% endfor %}
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+<section id="table-area" class="roster-container">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        {% assign mydata=site.data.baseball-roster %}
+        <div class="table-responsive">
+          <table class="table table-striped table-hover">
+              <caption>Table caption</caption>
+              <thead>
+              {% for column in mydata[0] %}
+                  <th>{{ column[0] }}</th>
+              {% endfor %}
+              </thead>
+              <tbody>
+              {% for row in mydata %}
+                  <tr>
+                  {% for cell in row %}
+                      <td>{{ cell[1] }}</td>
+                  {% endfor %}
+                  </tr>
+              {% endfor %}
+              </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
