Create content and styling for sub-nav

--- a/_includes/sub-nav.html
+++ b/_includes/sub-nav.html
@@ -1,1 +1,25 @@
 <!--  Sub Navitgation  -->
+<div class="container-fluid sub-nav">
+  <div class="row filler">&#160;</div>
+  <div class="row sub-nav-row mx-auto">
+    <div class="col-md-6 text-center">
+      <h1 class="page-heading">{{ page.title }}</h1>
+    </div>
+    <div class="col-md-6">
+      <ul class="nav justify-content-center">
+        <li class="nav-item">
+          <a href="{{page.baseurl}}/{{page.base}}/news" class="nav-link sub-nav-link">News</a>
+        </li>
+        <li class="nav-item">
+          <a href="{{page.baseurl}}/{{page.base}}/schedule" class="nav-link sub-nav-link">Schedule</a>
+        </li>
+        <li class="nav-item">
+          <a href="{{page.baseurl}}/{{page.base}}/roster" class="nav-link sub-nav-link">Roster</a>
+        </li>
+        <li class="nav-item">
+          <a href="{{page.baseurl}}/{{page.base}}/stats" class="nav-link sub-nav-link">Stats</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
