--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -12,6 +12,8 @@
 @import "3-modules/footer";
 @import "3-modules/hero-banner";
 @import "3-modules/img-hover";
+@import "3-modules/sub-nav";
+@import "3-modules/roster";
 
 /* Layout items */
 // @import "4-layout/header";
@@ -31,3 +33,4 @@
 @import "5-pages/facilities/facilities";
 /* Sports facilities */
 @import "5-pages/sports-facilities/sports-facilities";
+@import "5-pages/recruitment/recruitment";
