Add data-sn attribute to body tag

--- a/_layouts/sub-nav-landing-fb.html
+++ b/_layouts/sub-nav-landing-fb.html
@@ -1,5 +1,5 @@
 {% include head.html %}
-  <body id="page-top" class="landing">
+  <body  data-sn="{{ page.sport }}" id="page-top" class="landing">
   {% include global-nav.html %}
   {% include mega-nav.html %}
   {% include sub-nav.html %}
