--- a/assets/scss/0-tools/_vars.scss
+++ b/assets/scss/0-tools/_vars.scss
@@ -41,6 +41,8 @@ $footer-bg: #ffffff;         // Footer's background color
 $grey-heading: #666666;      // Grey headings used within page content
 $fa-color: $primary-red;
 $slide-bg: white;            // Background color for the upcoming games slick slides
+$sub-nav-heading: white;     // Font color for h1.page-heading heading of sub-nav
+$nav-link: white;            // Color for nav-link-main links in mega-nav
 
 body.landing {
   background-color: $landing-bg;
