Create light grey background behind schedule...
With defined height to resolve page paint issues,
and provide a paceholder when no content is available

--- a/assets/scss/3-modules/_sliders.scss
+++ b/assets/scss/3-modules/_sliders.scss
@@ -2,7 +2,7 @@
    slick carousels
 ============================================== */
 .slider-container {
-  margin-top: 142px;
+  margin-top: 60px;
   padding-left: 0;
   padding-right: 0;
 }
@@ -105,4 +105,9 @@
   .njcaa-logo {
     width: 200px;
   }
+}
+
+#track {
+  background: #f1f2f7;
+    height: 140px;
 }
