--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -74,29 +74,29 @@
                         <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/womens-basketball"><strong>Basketball</strong></a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link nav-link-main no-pad dark-text schedule-link" href="http://athletics.kcc.edu/wbasketball#schedule">Schedule</a>
+                        <a class="nav-link nav-link-main no-pad dark-text schedule-link" href="{{site.baseurl}}/womens-basketball/schedule">Schedule</a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link nav-link-main no-pad dark-text" href="http://athletics.kcc.edu/wbasketball#roster">Roster</a>
+                        <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/womens-basketball/roster">Roster</a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link nav-link-main no-pad dark-text" href="http://athletics.kcc.edu/wbasketball#news">News</a>
+                        <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/womens-basketball/news">News</a>
                       </div>
                     </div>
                   </li>
                   <li class="nav-list">
                     <div class="row nav-row">
                       <div class="col-md-4">
-                        <a class="nav-link nav-link-main no-pad dark-text" href="http://athletics.kcc.edu/softball"><strong>Softball</strong></a>
+                        <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/softball"><strong>Softball</strong></a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link nav-link-main no-pad dark-text schedule-link" href="http://athletics.kcc.edu/softball#schedule">Schedule</a>
+                        <a class="nav-link nav-link-main no-pad dark-text schedule-link" href="{{site.baseurl}}/softball/schedule">Schedule</a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link nav-link-main no-pad dark-text" href="http://athletics.kcc.edu/softball#roster">Roster</a>
+                        <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/softball/roster">Roster</a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link nav-link-main no-pad dark-text" href="http://athletics.kcc.edu/softball#news">News</a>
+                        <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/softball/news">News</a>
                       </div>
                     </div>
                   </li>
