Set defined height for news-scroll class
Prevents facebook repaint of page

--- a/assets/scss/5-pages/index/_home.scss
+++ b/assets/scss/5-pages/index/_home.scss
@@ -45,8 +45,9 @@
 }
 
 .news-scroll {
+  height: 488px;
   margin-right: -15px;
-  max-height: 485px;
+  max-height: 488px;
   overflow-y: scroll;
 }
 
