--- a/assets/scss/3-modules/_sliders.scss
+++ b/assets/scss/3-modules/_sliders.scss
@@ -7,8 +7,20 @@
   padding-right: 0;
 }
 
+.index-slider-container {
+  margin-top: 140px;
+  padding-left: 0;
+  padding-right: 0;
+}
+
 @media screen and (min-width: 1400px) {
   .slider-container {
+    max-width: 1300px;
+  }
+}
+
+@media screen and (min-width: 1400px) {
+  .index-slider-container {
     max-width: 1300px;
   }
 }
