Modularize scripts in layouts...
schedule pages need seperate JS files to avoid conflict

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,4 +5,6 @@
   {% include mega-nav.html %}
   {{ content }}
   {% include footer.html %}
+  {% include vendor-scripts.html %}
+  {% include custom-script.html %}
 {% include foot.html %}
