--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -7,4 +7,6 @@ baseurl: "../../"
   {% include mega-nav.html %}
   {{ content }}
   {% include footer.html %}
+  {% include vendor-scripts.html %}
+  {% include custom-script.html %}
 {% include foot.html %}
