--- a/_layouts/landing-fb.html
+++ b/_layouts/landing-fb.html
@@ -5,4 +5,6 @@
   {{ content }}
   {% include footer.html %}
   {% include facebook-widget.html %}
+  {% include vendor-scripts.html %}
+  {% include custom-script.html %}
 {% include foot.html %}
