--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,4 +4,6 @@
   {% include mega-nav.html %}
   {{ content }}
   {% include footer.html %}
+  {% include vendor-scripts.html %}
+  {% include custom-script.html %}
 {% include foot.html %}
