--- a/_layouts/sub-nav-landing-fb.html
+++ b/_layouts/sub-nav-landing-fb.html
@@ -1,9 +1,11 @@
 {% include head.html %}
-  <body  data-sn="{{ page.sport }}" id="page-top" class="landing">
+  <body data-sn="{{ page.sport }}" id="page-top" class="landing">
   {% include global-nav.html %}
   {% include mega-nav.html %}
   {% include sub-nav.html %}
   {{ content }}
   {% include footer.html %}
   {% include facebook-widget.html %}
+  {% include vendor-scripts.html %}
+  {% include custom-script.html %}
 {% include foot.html %}
