--- a/_layouts/sub-nav.html
+++ b/_layouts/sub-nav.html
@@ -5,4 +5,6 @@
   {% include sub-nav.html %}
   {{ content }}
   {% include footer.html %}
+  {% include vendor-scripts.html %}
+  {% include custom-script.html %}
 {% include foot.html %}
