Replace placeholder images. fix roster links

--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -21,7 +21,7 @@
                         <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/baseball"><strong>Baseball</strong></a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link nav-link-main no-pad dark-text schedule-link" href="{{site.baseurl}}/baseball#schedule">Schedule</a>
+                        <a class="nav-link nav-link-main no-pad dark-text schedule-link" href="{{site.baseurl}}/baseball/schedule">Schedule</a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
                         <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/baseball/roster">Roster</a>
@@ -37,10 +37,10 @@
                         <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/mens-basketball"><strong>Basketball</strong></a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link nav-link-main no-pad dark-text schedule-link" href="{{site.baseurl}}/mens-basketball#schedule">Schedule</a>
+                        <a class="nav-link nav-link-main no-pad dark-text schedule-link" href="{{site.baseurl}}/mens-basketball/schedule">Schedule</a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/mens-basketball#roster">Roster</a>
+                        <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/mens-basketball/roster">Roster</a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
                         <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/mens-basketball#news">News</a>
@@ -103,16 +103,16 @@
                   <li class="nav-list">
                     <div class="row nav-row">
                       <div class="col-md-4">
-                        <a class="nav-link nav-link-main no-pad dark-text" href="http://athletics.kcc.edu/volleyball"><strong>Volleyball</strong></a>
+                        <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/volleyball"><strong>Volleyball</strong></a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link nav-link-main no-pad dark-text schedule-link" href="http://athletics.kcc.edu/volleyball#schedule">Schedule</a>
+                        <a class="nav-link nav-link-main no-pad dark-text schedule-link" href="{{site.baseurl}}/volleyball/schedule">Schedule</a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link nav-link-main no-pad dark-text" href="http://athletics.kcc.edu/volleyball#roster">Roster</a>
+                        <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/volleyball/roster">Roster</a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link nav-link-main no-pad dark-text" href="http://athletics.kcc.edu/volleyball#news">News</a>
+                        <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/volleyball/news">News</a>
                       </div>
                     </div>
                   </li>
@@ -133,7 +133,7 @@
           <div class="row">
             <div class="col-md-4 d-none d-md-block">
               <a href="">
-                <img src="{{page.baseurl}}assets/img/nav-1.png" alt="" class="img-fluid nav-img">
+                <img src="{{page.baseurl}}assets/img/fitness-center-thumb.jpg" alt="Photo of the various equipment in the fitness center" class="img-fluid nav-img">
               </a>
             </div>
             <!-- /.col-md-4  -->
@@ -198,7 +198,7 @@
         <div class="row">
           <div class="col-md-4 d-none d-md-block">
             <a href="">
-              <img src="{{page.baseurl}}assets/img/nav-1.png" alt="" class="img-fluid nav-img">
+              <img src="{{page.baseurl}}assets/img/support-thumb.jpg" alt="Photo of a Cavaliers jersey" class="img-fluid nav-img">
             </a>
           </div>
           <!-- /.col-md-4  -->
@@ -236,7 +236,7 @@
         <div class="row">
           <div class="col-md-4 d-none d-md-block">
             <a href="">
-              <img src="{{page.baseurl}}assets/img/nav-1.png" alt="" class="img-fluid nav-img">
+              <img src="{{page.baseurl}}assets/img/njcaa-region4-logo.png" alt="" class="img-fluid nav-img">
             </a>
           </div>
           <!-- /.col-md-4  -->
