Create sass module for schedules pages
Add styling rules

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -14,6 +14,7 @@
 @import "3-modules/img-hover";
 @import "3-modules/sub-nav";
 @import "3-modules/roster";
+@import "3-modules/schedule-page";
 
 /* Layout items */
 // @import "4-layout/header";
