Fix links to newly built pages

--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -142,7 +142,7 @@
               <li class="nav-list">
                 <div class="row nav-row facilities-drop-pad">
                   <div class="col-md-3">
-                    <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/fitness-center"><strong>Fitness Center</strong></a>
+                    <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/facilities/fitness-center"><strong>Fitness Center</strong></a>
                   </div>
                   <div class="col-md-2 d-none d-md-block">
                     <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/fitness-center#membership">Membership</a>
@@ -191,7 +191,7 @@
 
     <!--  Support Athletics  -->
     <li class="nav-item dropdown active-nav">
-      <a class="nav-link nav-link-main dropdown-toggle" href="http://athletics.kcc.edu/support" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Support&#160;Athletics</a>
+      <a class="nav-link nav-link-main dropdown-toggle" href="{{site.baseurl}}/support" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">Support&#160;Athletics</a>
     <!--  Support Athletics dropdown menu  -->
     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
       <div class="container">
@@ -207,14 +207,14 @@
             <li class="nav-list">
               <div class="row nav-row support-drop-pad">
                 <div class="col-md-12">
-                  <a class="nav-link nav-link-main no-pad dark-text" href="http://athletics.kcc.edu/cash-bash"><strong>Cash Bash</strong></a>
+                  <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/support/cash-bash"><strong>Cash Bash</strong></a>
                 </div>
               </div>
             </li>
             <li class="nav-list">
               <div class="row nav-row">
                 <div class="col-md-12">
-                  <a class="nav-link nav-link-main no-pad dark-text" href="http://athletics.kcc.edu/cavalier-classic"><strong>Cavalier Classic Golf Outing</strong></a>
+                  <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/support/cavalier-classic"><strong>Cavalier Classic Golf Outing</strong></a>
                 </div>
               </div>
             </li>
@@ -229,7 +229,7 @@
 
     <!--  About  -->
     <li class="nav-item dropdown active-nav">
-      <a class="nav-link nav-link-main dropdown-toggle" href="http://athletics.kcc.edu/about" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About</a>
+      <a class="nav-link nav-link-main dropdown-toggle" href="{{site.baseurl}}/about" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">About</a>
     <!--  About dropdown menu  -->
     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
       <div class="container">
@@ -245,28 +245,28 @@
             <li class="nav-list">
               <div class="row nav-row about-drop-pad">
                 <div class="col-md-12">
-                  <a class="nav-link nav-link-main no-pad dark-text" href="http://athletics.kcc.edu/student-athletes"><strong>Student-Athlete Experience</strong></a>
+                  <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/about/student-athletes"><strong>Student-Athlete Experience</strong></a>
                 </div>
               </div>
             </li>
             <li class="nav-list">
               <div class="row nav-row">
                 <div class="col-md-12">
-                  <a class="nav-link nav-link-main no-pad dark-text" href="http://athletics.kcc.edu/equity"><strong>Equity in Athletics</strong></a>
+                  <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/about/equity"><strong>Equity in Athletics</strong></a>
                 </div>
               </div>
             </li>
             <li class="nav-list">
               <div class="row nav-row">
                 <div class="col-md-12">
-                  <a class="nav-link nav-link-main no-pad dark-text" href="http://athletics.kcc.edu/staff"><strong>Staff Directory</strong></a>
+                  <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/about/staff"><strong>Staff Directory</strong></a>
                 </div>
               </div>
             </li>
             <li class="nav-list">
               <div class="row nav-row">
                 <div class="col-md-12">
-                  <a class="nav-link nav-link-main no-pad dark-text" href="http://athletics.kcc.edu/staff"><strong>Alumni Survey</strong></a>
+                  <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/about/survey"><strong>Alumni Survey</strong></a>
                 </div>
               </div>
             </li>
