--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,4 +26,14 @@
         <link rel="icon" type="image/x-icon" href="{{page.baseurl}}favicon.ico" />
         <!-- Custom CSS Stylesheet -->
         <link rel="stylesheet" href="{{page.baseurl}}assets/css/main.css">
+        <!--[if IE]>
+     <style type="text/css">
+
+       .sample {
+         filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='http://athletics.kcc.edu/assets/img/menu-bg.png', sizingMethod='scale');
+         background:none !important;
+       }
+
+       </style>
+   <![endif]-->
     </head>
