--- a/assets/scss/3-modules/_mega-nav.scss
+++ b/assets/scss/3-modules/_mega-nav.scss
@@ -17,6 +17,7 @@
     margin-top: 0;
     min-height: 251px;
     height: 251px;
+    pointer-events: none;
   }
 }
 
@@ -199,4 +200,10 @@
 // Don't display the dropdown carrots for menu items
 .dropdown-toggle::after {
     display:none
+}
+
+.clickable {
+  pointer-events: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
