Fix facilities sub-pages' links

--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -161,19 +161,19 @@
                 <li class="nav-list">
                   <div class="row nav-row">
                     <div class="col-md-3">
-                      <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/sports-facilities"><strong>Sports Facilities</strong></a>
+                      <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/facilities/sports-facilities"><strong>Sports Facilities</strong></a>
                     </div>
                     <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/sports-facilities#gym">Ryan&#160;Activities Center</a>
+                      <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/facilities/sports-facilities#gym">Ryan&#160;Activities Center</a>
                     </div>
                     <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/sports-facilities#baseball-field">Baseball&#160;Field</a>
+                      <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/facilities/sports-facilities#baseball-field">Baseball&#160;Field</a>
                     </div>
                     <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/sports-facilities#soccer-field">Soccer&#160;Field</a>
+                      <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/facilities/sports-facilities#soccer-field">Soccer&#160;Field</a>
                     </div>
                     <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/sports-facilities#softball-field">Softball&#160;Field</a>
+                      <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/facilities/sports-facilities#softball-field">Softball&#160;Field</a>
                     </div>
                   </div>
                 </li>
