Fix top margin spacing content from navigation

--- a/_includes/roster-table.html
+++ b/_includes/roster-table.html
@@ -1,4 +1,4 @@
-<section id="table-area" class="roster-container">
+<section id="table-area" class="roster-container sub-nav-marg">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
